Fix wrapping on footer links

--- a/src/assets/stylesheets/_site.scss
+++ b/src/assets/stylesheets/_site.scss
@@ -72,6 +72,7 @@
 
   a {
     color: inherit;
+    white-space: nowrap;
   }
 
   .menu {
